[package]
name = "s4h"
version = "0.2.0"
authors = ["Greg Cowan <cowang4@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.13"
actix-web = "4.4"
blake2b_simd = "1.0"
bytes = { version = "1.3", features = ["serde"]}
chashmap = "2.2"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
serde = "1"
serde_derive = "1"
